--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@smastrom/react-rating": "^1.5.0",
     "aos": "^2.3.4",
     "axios": "^1.6.8",
     "firebase": "^10.11.1",
@@ -21,6 +22,7 @@
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
+    "react-simple-star-rating": "^5.1.7",
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^10.0.5",
     "sort-by": "^1.2.0",
